--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "three-globe": "^2.32.0"
   },
   "devDependencies": {
+    "@iconify/react": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
