--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.9",
+    "@sentry/cli": "^2.38.0",
     "@sentry/nextjs": "^8.34.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.8",
